ci: modify `.releaserc.json` for GitHub platform

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,7 @@
     "main"
   ],
   "plugins": [
-    "@semantic-release/gitlab",
+    "@semantic-release/github",
     [
       "@semantic-release/release-notes-generator",
       {
