ci: modify `github` pluging for semantic-release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,21 @@
     "main"
   ],
   "plugins": [
-    "@semantic-release/github",
+    [
+      "@semantic-release/github",
+      {
+        "assets": [
+          {
+            "path": "dist/asset.min.css",
+            "label": "CSS distribution"
+          },
+          {
+            "path": "dist/asset.min.js",
+            "label": "JS distribution"
+          }
+        ]
+      }
+    ],
     [
       "@semantic-release/release-notes-generator",
       {
